--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,5 +2,9 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  /* background-color: #10b475; */
+
+}
+body {
+  margin: 0;
+  /* color:#09aa6c; */
 }
